[metadata]
name = khdownload
version = 1.0.0
author = Logan Swartzendruber
author_email = logan.swartzendruber@gmail.com
description = Automatically download entire albums from khinsider from the commandline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/loganswartz/khdownload
classifiers =
	Programming Language :: Python :: 3.6
	Operating System :: POSIX :: Linux
	Operating System :: MacOS
	Topic :: Multimedia :: Video
	Topic :: Utilities

[options]
package_dir =
	khdownload = khdownload
packages = find:
python_requires = >=3.8
install_requires =
	click
	bs4
	requests
	tqdm

[options.entry_points]
console_scripts =
	khdownload = khdownload.cli:cli
